# rag-assistant

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
app/: main.py
app/api/routes/: chat.py  documents.py
app/core/: config.py
app/db/: session.py
app/ingestion/: pipeline.py
app/models/: models.py
app/rag/: graph.py  reranker.py  retriever.py
app/schemas/: schemas.py
scripts/: rebuild_index.py
tests/: test_api.py
