[tool.poetry]
name = "rag-assistant"
version = "0.1.0"
description = "Enterprise-grade RAG assistant with hybrid search"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
langchain-community = "^0.2.0"
langgraph = "^0.1.0"
faiss-cpu = "^1.8.0"
rank-bm25 = "^0.2.2"
sentence-transformers = "^3.0.0"
pymupdf = "^1.24.0"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.13.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
